# amalitech-python-training

./: .gitignore  .pre-commit-config.yaml  README.md  database.json  pyproject.toml
.github/workflows/: db-fundamentals-lab1.yml  db-fundamentals-lab2.yml  python-basics-lab1.yml  python-url-shortener-mod5.yml  python-url-shortener-mod6.yml
exercises/bulletproof-calculator/: .coverage  calculator.py  pyproject.toml  test_calculator.py
labs/clean-code-testing-and-git/lab-1-resilient-data-importer/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
labs/clean-code-testing-and-git/lab-1-resilient-data-importer/sample_data/: users.csv  users_with_errors.csv
labs/clean-code-testing-and-git/lab-1-resilient-data-importer/src/importer/: __init__.py  cli.py  exceptions.py  menu_handlers.py  models.py  parser.py  repository.py  validator.py
labs/clean-code-testing-and-git/lab-1-resilient-data-importer/tests/: __init__.py  conftest.py  test_cli.py  test_menu_handlers.py  test_models.py  test_parser.py  test_repository.py  test_validator.py
labs/clean-code-testing-and-git/lab-2-tdd-weather-service/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
labs/clean-code-testing-and-git/lab-2-tdd-weather-service/src/weather/: __init__.py  exceptions.py  mock_provider.py  models.py  provider.py  service.py
labs/clean-code-testing-and-git/lab-2-tdd-weather-service/tests/: conftest.py  test_exceptions.py  test_mock_provider.py  test_models.py  test_service.py
labs/database-fundamentals/lab-1-e-commerce-analytics-data-pipeline/: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
labs/database-fundamentals/lab-2-social-media-platform-data-backend/: .gitignore  README.md  docker-compose.yml  main.py  pr.md  pyproject.toml  requirements.txt
labs/python-advanced/lab-1-grade-analytics/: .gitignore  README.md  main.py
labs/python-advanced/lab-2-log-file-analyzer/: .gitignore  README.md  main.py  pyproject.toml
labs/python-basics/lab-1-student-course-management/: README.md  app.py  main.py  menu_handlers.py  pyproject.toml
labs/python-basics/lab-1-student-course-management/src/data/: __init__.py
labs/python-basics/lab-1-student-course-management/src/models/: course.py  enrollment.py  student.py
labs/python-basics/lab-1-student-course-management/src/reports/: report_generator.py
labs/python-basics/lab-1-student-course-management/src/utils/: helpers.py
labs/python-basics/lab-1-student-course-management/tests/: conftest.py  test_course.py  test_enrollment.py  test_grades_gpa.py  test_student.py  test_student_behavior.py  test_student_creation.py  test_student_setters.py  test_tuition.py
projects/python-url-shortener-microservice/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  explain-url-shortener-project.md  manage.py  pyproject.toml  requirements.txt
projects/python-url-shortener-microservice/api/: urls.py
projects/python-url-shortener-microservice/config/: asgi.py  settings.py  urls.py
projects/python-url-shortener-microservice/core/: views.py
projects/python-url-shortener-microservice/shortener/: exceptions.py  generators.py  models.py  protocols.py  schemas.py  serializers.py  urls.py  validators.py  views.py
projects/python-url-shortener-microservice/tests/: conftest.py  test_health.py  test_models.py  test_serializers.py  test_views.py
projects/todo-app-agile-devops/: README.md  pyproject.toml
projects/todo-app-agile-devops/docs/: sprint0.md  (+4 more)
(+63 files in other folders)
