[tool.poetry]
name = "student-course-management"
version = "0.1.0"
description = "A Student Course Management System"
package-mode = false
authors = ["EmmanuelSHYIRAMBERE <emashyirambere1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
colorama = ">=0.4.6,<0.5.0"
tabulate = ">=0.10.0,<0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
